Var ratio calculation

--- a/notebook/Preprocessing_and_EDA.ipynb
+++ b/notebook/Preprocessing_and_EDA.ipynb
@@ -501,9 +501,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TSLA Value at Risk (VaR) at 95% confidence: -5.125703646165556\n",
+      "BND Value at Risk (VaR) at 95% confidence: -0.5082926147970168\n",
+      "SPY Value at Risk (VaR) at 95% confidence: -1.6798401951985387\n"
+     ]
+    }
+   ],
    "source": [
     "processor.var_ratio(stoke_data)"
    ]
