Code Documentation Edit

--- a/notebook/ARIMA_model.ipynb
+++ b/notebook/ARIMA_model.ipynb
@@ -109,6 +109,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Interpreting the Results**\n",
+    "\n",
+    "Based on the provided test statistics:\n",
+    "\n",
+    "* Test Statistic: -1.1507672706146044\n",
+    "* p-value: 0.6944080657685303\n",
+    "* Critical Values: -3.433, -2.863, -2.567\n",
+    "\n",
+    "**Conclusion**\n",
+    "\n",
+    "Since the p-value (0.6944) is greater than the significance level (usually 0.05), we fail to reject the null hypothesis. This means that we cannot conclude that the time series is stationary. In other words, the time series is **non-stationary**.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### **Train-Test Split**"
    ]
   },
@@ -133,7 +150,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Grid Search p,q and d parameters**"
+    "### **Grid Search p,q and d parameters**\n",
+    "\n",
+    "**ARIMA Model Parameters:**\n",
+    "\n",
+    "* p: The order of the autoregressive part. It specifies the number of lagged observations included in the model.\n",
+    "* d: The order of differencing. It specifies the number of times the time series needs to be differenced to become stationary.\n",
+    "* q: The order of the moving average part. It specifies the number of lagged forecast errors included in the model.\n",
+    "\n",
+    "**Grid Search Process:**\n",
+    "\n",
+    "1.\tDefine the Parameter Space:\n",
+    "\n",
+    "* Specify a range of values for each parameter (p, d, q). For example, you might consider p and q values from 0 to 3, and d values from 0 to 2.\n",
+    "\n",
+    "2.\tCreate a Grid of Parameter Combinations:\n",
+    "\n",
+    "* Generate all possible combinations of the specified parameter values.\n",
+    "\n",
+    "3.\tFit the Model for Each Combination:\n",
+    "\n",
+    "* For each combination of (p, d, q) values: \n",
+    "- Fit the ARIMA model to the training data.\n",
+    "- Calculate the Akaike Information Criterion (AIC) for the fitted model.\n",
+    "4.\tSelect the Best Model:\n",
+    "* Choose the model with the lowest AIC value. This model is considered the best-fitting model.\n"
    ]
   },
   {
@@ -158,6 +199,15 @@
    ],
    "source": [
     "best_params=modelling.grid_search(train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Interpretation**\n",
+    "\n",
+    "Best ARIMA parameters: (2, 1, 3)"
    ]
   },
   {
@@ -217,6 +267,20 @@
    ],
    "source": [
     "modelling.evaluate_arima_model(test,forecast)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Interpretation**\n",
+    "-**High Error Metrics**: The high values of MAE, MSE, and RMSE indicate that the model struggles to accurately predict TSLA's stock price.\n",
+    "- **Negative R-squared**: The negative R-squared value suggests that the model's predictions are worse than a simple mean forecast.\n",
+    "- **High MAPE**: The high MAPE indicates that the model's predictions are significantly different from the actual values, on average.\n",
+    "\n",
+    "**Conclusion**\n",
+    "\n",
+    "The ARIMA model for TSLA is not performing well. This could be due to the high volatility and non-linear patterns in Tesla's stock price, which may not be adequately captured by a linear ARIMA model.\n"
    ]
   },
   {
@@ -300,6 +364,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Interpreting the Results**\n",
+    "\n",
+    "Based on the provided test statistics:\n",
+    "\n",
+    "* Test Statistic: -0.8164742995386136\n",
+    "* p-value: 0.8142349053641602\n",
+    "* Critical Values: -3.433, -2.863, -2.567\n",
+    "\n",
+    "**Conclusion**\n",
+    "\n",
+    "Since the p-value (0.6944) is greater than the significance level (usually 0.05), we fail to reject the null hypothesis. This means that we cannot conclude that the time series is stationary. In other words, the time series is **non-stationary**.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### **Train-Test Split**"
    ]
   },
@@ -324,7 +405,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Grid Search p,q and d parameters**"
+    "### **Grid Search p,q and d parameters**\n",
+    "### **Grid Search p,q and d parameters**\n",
+    "\n",
+    "**ARIMA Model Parameters:**\n",
+    "\n",
+    "* p: The order of the autoregressive part. It specifies the number of lagged observations included in the model.\n",
+    "* d: The order of differencing. It specifies the number of times the time series needs to be differenced to become stationary.\n",
+    "* q: The order of the moving average part. It specifies the number of lagged forecast errors included in the model.\n",
+    "\n",
+    "**Grid Search Process:**\n",
+    "\n",
+    "1.\tDefine the Parameter Space:\n",
+    "\n",
+    "* Specify a range of values for each parameter (p, d, q). For example, you might consider p and q values from 0 to 3, and d values from 0 to 2.\n",
+    "\n",
+    "2.\tCreate a Grid of Parameter Combinations:\n",
+    "\n",
+    "* Generate all possible combinations of the specified parameter values.\n",
+    "\n",
+    "3.\tFit the Model for Each Combination:\n",
+    "\n",
+    "* For each combination of (p, d, q) values: \n",
+    "- Fit the ARIMA model to the training data.\n",
+    "- Calculate the Akaike Information Criterion (AIC) for the fitted model.\n",
+    "4.\tSelect the Best Model:\n",
+    "* Choose the model with the lowest AIC value. This model is considered the best-fitting model.\n"
    ]
   },
   {
@@ -414,6 +520,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Intertpretation**\n",
+    "\n",
+    "- **Low Error Metrics**: The low values of MAE, MSE, RMSE, and MAPE suggest that the model is performing well in predicting BND's stock price.\n",
+    "- **Negative R-squared**: While the R-squared value is negative, the low error metrics indicate that the model's predictions are still better than a simple mean forecast.\n",
+    "\n",
+    "**Conclusion:** The ARIMA model for BND seems to be performing reasonably well, especially considering the relatively stable nature of bond ETFs.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### **Plot Result**"
    ]
   },
@@ -491,6 +609,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Interpreting the Results**\n",
+    "\n",
+    "Based on the provided test statistics:\n",
+    "\n",
+    "* Test Statistic: 0.7298432272822041\n",
+    "* p-value:0.9904150070128018\n",
+    "* Critical Values: -3.433, -2.863, -2.567\n",
+    "\n",
+    "**Conclusion**\n",
+    "\n",
+    "Since the p-value (0.6944) is greater than the significance level (usually 0.05), we fail to reject the null hypothesis. This means that we cannot conclude that the time series is stationary. In other words, the time series is **non-stationary**.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### **Train-Test Split**"
    ]
   },
@@ -515,7 +650,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Grid Search p,q and d parameters**"
+    "### **Grid Search p,q and d parameters**\n",
+    "\n",
+    "**ARIMA Model Parameters:**\n",
+    "\n",
+    "* p: The order of the autoregressive part. It specifies the number of lagged observations included in the model.\n",
+    "* d: The order of differencing. It specifies the number of times the time series needs to be differenced to become stationary.\n",
+    "* q: The order of the moving average part. It specifies the number of lagged forecast errors included in the model.\n",
+    "\n",
+    "**Grid Search Process:**\n",
+    "\n",
+    "1.\tDefine the Parameter Space:\n",
+    "\n",
+    "* Specify a range of values for each parameter (p, d, q). For example, you might consider p and q values from 0 to 3, and d values from 0 to 2.\n",
+    "\n",
+    "2.\tCreate a Grid of Parameter Combinations:\n",
+    "\n",
+    "* Generate all possible combinations of the specified parameter values.\n",
+    "\n",
+    "3.\tFit the Model for Each Combination:\n",
+    "\n",
+    "* For each combination of (p, d, q) values: \n",
+    "- Fit the ARIMA model to the training data.\n",
+    "- Calculate the Akaike Information Criterion (AIC) for the fitted model.\n",
+    "4.\tSelect the Best Model:\n",
+    "* Choose the model with the lowest AIC value. This model is considered the best-fitting model.\n"
    ]
   },
   {
@@ -599,6 +758,18 @@
    ],
    "source": [
     "modelling.evaluate_arima_model(test,forecast)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Interpretation**\n",
+    "- **High Error Metrics**: The high values of MAE, MSE, RMSE, and MAPE indicate that the model struggles to accurately predict SPY's stock price.\n",
+    "\n",
+    "- **Negative R-squared**: The negative R-squared value suggests that the model's predictions are worse than a simple mean forecast.\n",
+    "\n",
+    "**Conclusion:** The ARIMA model for SPY is not performing well. This could be due to the complex dynamics of the stock market and the influence of various economic and geopolitical factors.\n"
    ]
   },
   {
