--- a/notebook/SARIMA_model.ipynb
+++ b/notebook/SARIMA_model.ipynb
@@ -4,7 +4,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SARIMA Model "
+    "# SARIMA Model \n",
+    "It's an extension of the ARIMA model that explicitly accounts for seasonality in time series data.\n",
+    "\n",
+    "Key Components of SARIMA:\n",
+    "\n",
+    "- Autoregressive (AR) Part: This component models the relationship between the current value and past values of the time series.\n",
+    "- Integrated (I) Part: This component involves differencing the time series to make it stationary.\n",
+    "- Moving Average (MA) Part: This component models the relationship between the current value and past errors.\n",
+    "- Seasonal Autoregressive (SAR) Part: This component models the relationship between the current value and past seasonal values.\n",
+    "- Seasonal Difference (SD) Part: This component involves differencing the time series to remove seasonal patterns.\n",
+    "- Seasonal Moving Average (SMA) Part: This component models the relationship between the current value and past seasonal errors.\n",
+    "\n",
+    "SARIMA Model Specification:\n",
+    "\n",
+    "A SARIMA model is typically denoted as SARIMA (p, d, q) (P, D, Q) s, where:\n",
+    "\n",
+    "- `p`: Order of the AR term\n",
+    "- `d`: Order of differencing\n",
+    "- `q`: Order of the MA term\n",
+    "- `P`: Order of the seasonal AR term\n",
+    "- `D`: Order of the seasonal difference\n",
+    "- `Q`: Order of the seasonal MA term\n",
+    "- `s`: Period of seasonality\n",
+    "\n",
+    "When to Use SARIMA:\n",
+    "•\tWhen the time series exhibits clear seasonal patterns.\n",
+    "•\tWhen the time series is non-stationary and requires differencing to become stationary.\n",
+    "•\tWhen the underlying process generating the time series is linear.\n"
    ]
   },
   {
@@ -98,7 +125,7 @@
    "metadata": {},
    "source": [
     "### **Grid Search P,Q and D parameters**\n",
-    "The non-seasonal parameters (p,d and q) are used from the grid search used in the ARIMA model earlier."
+    "Similar to ARIMA models, we can use grid search to determine the optimal parameters for SARIMA models. We use p, q and d that we find from grid searching from the ARIMA model. In our case s=52 (the daily data is resampled to make weekly) since the seasonality is annual"
    ]
   },
   {
@@ -184,6 +211,19 @@
    ],
    "source": [
     "modelling.evaluate_sarima_model(test,forecast)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Interpretation**\n",
+    "- **High Error Metrics**: The high values of MAE, MSE, RMSE, and MAPE indicate that the SARIMA model struggles to accurately predict TSLA's stock price.\n",
+    "- **Negative R-squared**: The negative R-squared value suggests that the model's predictions are worse than a simple mean forecast.\n",
+    "\n",
+    "**Conclusion:**\n",
+    "\n",
+    "The SARIMA model for TSLA is not performing well. This could be due to the high volatility and non-linear patterns in Tesla's stock price, which may not be fully captured by the SARIMA model."
    ]
   },
   {
@@ -348,6 +388,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Interpretation**\n",
+    "- **Low Error Metrics**: The low values of MAE, MSE, RMSE, and MAPE suggest that the SARIMA model is performing well in predicting BND's stock price.\n",
+    "- **Negative R-squared**: While the R-squared value is negative, the low error metrics indicate that the model's predictions are still better than a simple mean forecast.\n",
+    "\n",
+    "**Conclusion:**\n",
+    "\n",
+    "The SARIMA model for BND seems to be performing reasonably well, especially considering the relatively stable nature of bond ETFs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### **Plot Result**"
    ]
   },
@@ -500,6 +553,19 @@
    ],
    "source": [
     "modelling.evaluate_sarima_model(test,forecast)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Interpretation**\n",
+    "- **High Error Metrics**: The high values of MAE, MSE, RMSE, and MAPE indicate that the SARIMA model struggles to accurately predict SPY's stock price.\n",
+    "- **Negative R-squared**: The negative R-squared value suggests that the model's predictions are worse than a simple mean forecast.\n",
+    "\n",
+    "**Conclusion:**\n",
+    "\n",
+    "The SARIMA model for SPY is not performing well. This could be due to the complex dynamics of the stock market and the influence of various economic and geopolitical factors."
    ]
   },
   {
